feat: expose material workbench APIs
